--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>WEbUSB APi</h1>
-<a href="#" id="click">Connect Smart Card Reader</a>
+<!-- <a href="#" id="click">Connect Smart Card Reader</a>
 <script>
     click.onclick=function(){
             navigator.usb.requestDevice({ filters: [
@@ -17,6 +17,6 @@
             .catch(error => { console.log(error); });      
    
 }
-</script>
+</script> -->
 </body>
 </html>
